use std::sync::Arc;
use tonic::{Request, Response, Status};
use tracing::info;

use crate::{
    db::DatabaseAccess,
    proto::{
        order::*,
        inventory::*,
        return_order::*,
        warranty::*,
        shipment::*,
        work_order::*,
    },
};

#[derive(Clone)]
pub struct StateSetApi {
    pub db: Arc<DatabaseAccess>,
}

impl StateSetApi {
    pub fn new(db: Arc<DatabaseAccess>) -> Self {
        Self { db }
    }
}

// Order Service Implementation
#[tonic::async_trait]
impl order_service_server::OrderService for StateSetApi {
    async fn create_order(
        &self,
        request: Request<CreateOrderRequest>,
    ) -> Result<Response<CreateOrderResponse>, Status> {
        info!("Creating order: {:?}", request.get_ref());
        
        let response = CreateOrderResponse {
            order_id: "order_123".to_string(),
            status: OrderStatus::Pending as i32,
            created_at: Some(prost_types::Timestamp {
                seconds: chrono::Utc::now().timestamp(),
                nanos: 0,
            }),
        };
        
        Ok(Response::new(response))
    }

    async fn get_order(
        &self,
        request: Request<GetOrderRequest>,
    ) -> Result<Response<GetOrderResponse>, Status> {
        let order_id = &request.get_ref().order_id;
        info!("Getting order: {}", order_id);
        
        let response = GetOrderResponse {
            order: Some(Order {
                id: order_id.clone(),
                customer_id: "customer_123".to_string(),
                items: vec![],
                total_amount: None,
                status: OrderStatus::Processing as i32,
                created_at: Some(prost_types::Timestamp {
                    seconds: chrono::Utc::now().timestamp() - 3600,
                    nanos: 0,
                }),
                shipping_address: None,
                billing_address: None,
                payment_method_id: "".to_string(),
                shipment_id: "".to_string(),
            }),
        };
        
        Ok(Response::new(response))
    }

    async fn update_order_status(
        &self,
        request: Request<UpdateOrderStatusRequest>,
    ) -> Result<Response<UpdateOrderStatusResponse>, Status> {
        info!("Updating order status: {:?}", request.get_ref());
        
        let req = request.into_inner();
        let response = UpdateOrderStatusResponse {
            order_id: req.order_id,
            status: req.new_status,
        };
        
        Ok(Response::new(response))
    }

    async fn list_orders(
        &self,
        request: Request<ListOrdersRequest>,
    ) -> Result<Response<ListOrdersResponse>, Status> {
        info!("Listing orders: {:?}", request.get_ref());
        
        let response = ListOrdersResponse {
            orders: vec![], // Empty list for now
            pagination: None,
        };
        
        Ok(Response::new(response))
    }
}

// Inventory Service Implementation
#[tonic::async_trait]
impl inventory_service_server::InventoryService for StateSetApi {
    async fn get_inventory(
        &self,
        request: Request<GetInventoryRequest>,
    ) -> Result<Response<GetInventoryResponse>, Status> {
        info!("Getting inventory: {:?}", request.get_ref());
        
        let response = GetInventoryResponse {
            item: None, // No item found
        };
        
        Ok(Response::new(response))
    }

    async fn update_inventory(
        &self,
        request: Request<UpdateInventoryRequest>,
    ) -> Result<Response<UpdateInventoryResponse>, Status> {
        info!("Updating inventory: {:?}", request.get_ref());
        
        let response = UpdateInventoryResponse {
            product_id: request.get_ref().product_id.clone(),
            new_quantity: 100, // Example new quantity after change
            warehouse_id: request.get_ref().warehouse_id.clone(),
        };
        
        Ok(Response::new(response))
    }

    async fn list_inventory(
        &self,
        request: Request<ListInventoryRequest>,
    ) -> Result<Response<ListInventoryResponse>, Status> {
        info!("Listing inventory: {:?}", request.get_ref());
        
        let response = ListInventoryResponse {
            items: vec![], // Empty list for now
            pagination: None, // No pagination for now
        };
        
        Ok(Response::new(response))
    }

    async fn reserve_inventory(
        &self,
        request: Request<ReserveInventoryRequest>,
    ) -> Result<Response<ReserveInventoryResponse>, Status> {
        info!("Reserving inventory: {:?}", request.get_ref());
        
        let response = ReserveInventoryResponse {
            success: true,
            reservation_id: "reservation_123".to_string(),
        };
        
        Ok(Response::new(response))
    }
}

// Return Service Implementation  
#[tonic::async_trait]
impl return_service_server::ReturnService for StateSetApi {
    async fn create_return(
        &self,
        request: Request<CreateReturnRequest>,
    ) -> Result<Response<CreateReturnResponse>, Status> {
        info!("Creating return: {:?}", request.get_ref());
        
        let response = CreateReturnResponse {
            return_id: "return_123".to_string(),
            status: ReturnStatus::Requested as i32,
        };
        
        Ok(Response::new(response))
    }

    async fn get_return(
        &self,
        request: Request<GetReturnRequest>,
    ) -> Result<Response<GetReturnResponse>, Status> {
        let return_id = &request.get_ref().return_id;
        info!("Getting return: {}", return_id);
        
        let response = GetReturnResponse {
            r#return: Some(Return {
                id: return_id.clone(),
                order_id: "order_123".to_string(),
                customer_id: "customer_123".to_string(),
                items: vec![],
                reason: "Defective item".to_string(),
                status: ReturnStatus::Received as i32,
                created_at: Some(prost_types::Timestamp {
                    seconds: chrono::Utc::now().timestamp() - 3600,
                    nanos: 0,
                }),
                updated_at: None,

            }),
        };
        
        Ok(Response::new(response))
    }

    async fn update_return_status(
        &self,
        request: Request<UpdateReturnStatusRequest>,
    ) -> Result<Response<UpdateReturnStatusResponse>, Status> {
        info!("Updating return status: {:?}", request.get_ref());
        
        let req = request.into_inner();
        let response = UpdateReturnStatusResponse {
            return_id: req.return_id,
            status: req.new_status,
        };
        
        Ok(Response::new(response))
    }

    async fn list_returns(
        &self,
        request: Request<ListReturnsRequest>,
    ) -> Result<Response<ListReturnsResponse>, Status> {
        info!("Listing returns: {:?}", request.get_ref());
        
        let response = ListReturnsResponse {
            returns: vec![], // Empty list for now
            pagination: None,
        };
        
        Ok(Response::new(response))
    }
}

// Basic placeholder implementations for other services
#[tonic::async_trait]
impl warranty_service_server::WarrantyService for StateSetApi {
    async fn create_warranty(
        &self,
        _request: Request<CreateWarrantyRequest>,
    ) -> Result<Response<CreateWarrantyResponse>, Status> {
        Err(Status::unimplemented("Warranty service not yet implemented"))
    }

    async fn get_warranty(
        &self,
        _request: Request<GetWarrantyRequest>,
    ) -> Result<Response<GetWarrantyResponse>, Status> {
        Err(Status::unimplemented("Warranty service not yet implemented"))
    }

    async fn update_warranty(
        &self,
        _request: Request<UpdateWarrantyRequest>,
    ) -> Result<Response<UpdateWarrantyResponse>, Status> {
        Err(Status::unimplemented("Warranty service not yet implemented"))
    }

    async fn list_warranties(
        &self,
        _request: Request<ListWarrantiesRequest>,
    ) -> Result<Response<ListWarrantiesResponse>, Status> {
        Err(Status::unimplemented("Warranty service not yet implemented"))
    }
}

#[tonic::async_trait]
impl shipment_service_server::ShipmentService for StateSetApi {
    async fn create_shipment(
        &self,
        _request: Request<CreateShipmentRequest>,
    ) -> Result<Response<CreateShipmentResponse>, Status> {
        Err(Status::unimplemented("Shipment service not yet implemented"))
    }

    async fn get_shipment(
        &self,
        _request: Request<GetShipmentRequest>,
    ) -> Result<Response<GetShipmentResponse>, Status> {
        Err(Status::unimplemented("Shipment service not yet implemented"))
    }

    async fn update_shipment_status(
        &self,
        _request: Request<UpdateShipmentStatusRequest>,
    ) -> Result<Response<UpdateShipmentStatusResponse>, Status> {
        Err(Status::unimplemented("Shipment service not yet implemented"))
    }

    async fn list_shipments(
        &self,
        _request: Request<ListShipmentsRequest>,
    ) -> Result<Response<ListShipmentsResponse>, Status> {
        Err(Status::unimplemented("Shipment service not yet implemented"))
    }
}

#[tonic::async_trait]
impl work_order_service_server::WorkOrderService for StateSetApi {
    async fn create_work_order(
        &self,
        _request: Request<CreateWorkOrderRequest>,
    ) -> Result<Response<CreateWorkOrderResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }

    async fn get_work_order(
        &self,
        _request: Request<GetWorkOrderRequest>,
    ) -> Result<Response<GetWorkOrderResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }

    async fn update_work_order(
        &self,
        _request: Request<UpdateWorkOrderRequest>,
    ) -> Result<Response<UpdateWorkOrderResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }

    async fn list_work_orders(
        &self,
        _request: Request<ListWorkOrdersRequest>,
    ) -> Result<Response<ListWorkOrdersResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }

    async fn delete_work_order(
        &self,
        _request: Request<DeleteWorkOrderRequest>,
    ) -> Result<Response<DeleteWorkOrderResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }

    async fn assign_work_order(
        &self,
        _request: Request<AssignWorkOrderRequest>,
    ) -> Result<Response<AssignWorkOrderResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }

    async fn complete_work_order(
        &self,
        _request: Request<CompleteWorkOrderRequest>,
    ) -> Result<Response<CompleteWorkOrderResponse>, Status> {
        Err(Status::unimplemented("Work order service not yet implemented"))
    }
}